src/test/ui/parser/raw/raw-str-unbalanced.rs
static s: &'static str =
    r#"
      "## //~ too many `#` when terminating raw string
;
